--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 
 website:
   title: "Francine Couture"
-  description: "Francine Couture personale website."
+  description: "Site personnel de Francine Couture."
   search: false
       
   # options
